--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5000
-PORT_VUE=8080
-URI= mongodb+srv://admin:omiORHaTfmgU4QIG@cluster0.2ver9.mongodb.net/daterdv
+PORT= '5000'
+PORT_VUE= 'http://localhost:8080'
+URI='mongodb+srv://admin:omiORHaTfmgU4QIG@cluster0.2ver9.mongodb.net/daterdv'
