--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "nodemon index.js"
+    "build": "node index.js"
 
   },
   "author": "",
