--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-    },
+    "start": "nodemon index.js",
+    "build": "nodemon index.js"
+
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
